# spot_future_arbitrage

./: Cargo.toml  README.md
examples/: binance_endpoints.rs  binance_futures.rs  binance_websockets.rs
src/: main.rs
