[package]
name = "spot_future_arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance-rs-async = { git = "https://github.com/lijiachang/binance-rs-async-ext.git" }
toml = "0.8.12"
anyhow = "1.0.80"
tokio-tungstenite = "0.21"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "mysql", "rust_decimal"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.96"
serde_qs = "0.13.0"
serde_repr = "0.1"
lazy_static = "1.4.0"
chrono = "0.4.23"
futures = "0.3"
thiserror = "1.0"
reqwest = { version = "0.12.4", features = ["json"], default-features = false }
url = "2.5"
once_cell = "1.8.0"
env_logger = "0.11.3"
log = "0.4"
rust_decimal = { version = "1.18.0", features = ["serde-bincode"] }
hex = "0.4"
ring = "0.17"
boolinator = "2.4"
dashmap = "5.5.3"
tracing = { version = "0.1", features = ["release_max_level_debug", "log"] }

#toml: 用于解析和序列化TOML格式的库，类似Python中的toml库。
#anyhow: 一个错误处理库，提供了方便的错误传播和处理方式，类似Python中的异常处理。
#tokio-tungstenite: 一个基于Tokio的WebSocket客户端和服务器库。
#tokio: 一个异步运行时库，提供了异步编程的基础设施，类似Python中的asyncio。
#redis: 用于与Redis数据库进行交互的库，支持异步操作。
#sqlx: 一个异步的SQL数据库连接库，支持多种数据库，如MySQL和PostgreSQL。
#serde和serde_json: 用于序列化和反序列化数据的库，支持JSON格式，类似Python中的json模块。
#serde_qs: 用于解析和生成查询字符串的库。
#serde_repr: 用于为枚举类型自动派生序列化和反序列化实现的库。
#lazy_static: 用于定义惰性初始化的静态变量的库。
#chrono: 日期和时间处理库，类似Python中的datetime模块。
#futures: 提供了异步编程的抽象和工具的库。
#thiserror: 一个用于定义和处理错误类型的库。
#reqwest: 一个HTTP客户端库，支持异步请求和JSON解析。
#url: 用于解析和操作URL的库。
#once_cell: 提供了线程安全的单例和惰性初始化的库。
#env_logger和log: 用于日志记录的库，可以方便地输出调试信息。
#rust_decimal: 提供了高精度的十进制数字类型，支持序列化。
#hex: 用于在字节和十六进制字符串之间进行转换的库。
#ring: 一个加密库，提供了各种加密算法和安全的随机数生成。
#boolinator: 一个用于将字符串解析为布尔值的库。
#dashmap: 一个并发哈希表的实现，支持多线程访问。
#rocksdb: 一个高性能的键值存储库，支持多线程和列族。
#bincode: 一个紧凑的二进制序列化库。
